@@ -24,6 +24,7 @@ manifest {
  **********/
 
 params {
+  disableAutoClean = false
   help = false
   name = false
   samplePlan = null
